--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
+# Jorge de la Torre - jorgedlt@gmail.com - Standard .gitignore
+
+# MAC OS X
+.DS_Store
+
+# Log file
+*.log
+*-log.json
+
+# AWS env files
+*.pem
+
+# DLT pem file
+*.env
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Compiled class file
+*.class
+
+# plus the standard stuff
 # Build and Release Folders
 bin/
 bin-debug/
